@@ -11,22 +11,15 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class SingletionTest {
-    private String filePath = "testclasses/singletonResources";
-
-    ArrayList<ClassModel> classesUnderTest;
-    {
-        try {
-            classesUnderTest = ASMAdapter.parseASM(filePath);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
+    private final String filePath = "src/test/resources/singletonResources";
+    ArrayList<ClassModel> classesUnderTest = ASMAdapter.parseASM(filePath);
     ClassModel singleton = classesUnderTest.remove(3);
+
     @Test
     public void singletonTest_notSingletons(){
         LintCheck check = new SingletonCheck();
 
-        List<String> expected = new ArrayList<String>(Arrays.asList(
+        List<String> expected = new ArrayList<>(Arrays.asList(
                 "NotSingleton1 is not a Singleton",
                 "NotSingleton2 is not a Singleton",
                 "NotSingleton3 is not a Singleton"));
@@ -39,7 +32,7 @@ public class SingletionTest {
         ArrayList<ClassModel> classes = new ArrayList<>();
         classes.add(singleton);
 
-        List<String> expected = new ArrayList<String>(Arrays.asList("Singleton is a Singleton"));
+        List<String> expected = new ArrayList<>(List.of("Singleton is a Singleton"));
         List<String> actual = check.runLintCheck(classes);
         assertEquals(expected, actual);
     }
